--- a/app/src/main/res/layout/product_list_layout.xml
+++ b/app/src/main/res/layout/product_list_layout.xml
@@ -9,7 +9,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/recyclerview"
+        android:visibility="visible"
         tools:listitem="@layout/product_card_layout"
         tools:itemCount="6"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/no_products_available"
+        android:visibility="gone"
+        android:text="@string/no_products_available"/>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
